# interactive-mcp-popup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api.md  configuration.md  examples.md
examples/: advanced_usage.py  basic_usage.py
src/interactive_mcp_popup/: __init__.py  conversation.py  popup.py  server.py  server_enhanced.py  server_fixed.py  utils.py
tests/: __init__.py  test_conversation.py  test_popup.py
